[package]
name = "rsrun"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_14"] }
glib = { version = "0.20.9", features = ["log"] }
log = "0.4.26"
anyhow = "1.0.97"
